apps/client/src/styles.css
/* You can add global styles to this file, and also import other style files */
@import 'primeng/resources/themes/lara-light-blue/theme.css';
@import 'primeng/resources/primeng.css';
@import 'primeicons/primeicons.css';

:root {
  --ucab-yellow-hex: #fbc430;
  --ucab-blue-hex: #37b4e3;
  --ucab-green-hex: #007935;
  --background-color: #fdfff9;
  --text-color-secondary: #373737;
  --primary-color: #00ad7c;
  --primary-color-text: #fff;
  --light-green: #f2f8e6;
  --gris-tirando-a-verde: #fce5c3;
  --severity-info: #0ea5e9;
  --severity-success: #22c55e;
  --severity-danger: #ef4444;
  font-family:
    'Inter var',
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Helvetica,
    Arial,
    sans-serif,
    'Apple Color Emoji',
    'Segoe UI Emoji',
    'Segoe UI Symbol';
}

body {
  min-height: 100dvh;
  padding: 0px;
  margin: 0px;
  background-color: var(--background-color);
  scroll-behavior: smooth;
}

/* Scroll Styles */

body::-webkit-scrollbar {
  width: 10px;
  height: 5px;
}

body::-webkit-scrollbar-thumb {
  background-color: var(--primary-color);
  border-radius: 20px;
}

.p-dropdown-items-wrapper::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

.p-dropdown-items-wrapper::-webkit-scrollbar-thumb {
  background-color: var(--primary-color);
  border-radius: 20px;
}

.p-datatable-wrapper::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

.p-datatable-wrapper::-webkit-scrollbar-thumb {
  background-color: var(--primary-color);
  border-radius: 20px;
}

.p-component::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

.p-component::-webkit-scrollbar-thumb {
  background-color: var(--primary-color);
  border-radius: 20px;
}

/* Scroll */

.p-datatable-thead .p-element {
  background-color: var(--light-green);
}

.p-datatable-body .p-element {
  background-color: var(--background-color);
}

.p-scrolltop {
  background-color: var(--primary-color);
}

fieldset {
  border: none;
}

.p-toast-message {
  border: 1px solid;
}

.p-toast-detail {
  color: black;
  font-weight: 300;
}

.p-button-label {
  font-weight: 500;
}

/* Remove the default style of showing error border in PrimeNG text type input */
.p-inputtext.ng-dirty.ng-invalid {
  border-color: unset;
}

/* Set our style (when input is touched, dirty and invalid) to show error border in PrimeNG text input. */
.p-inputtext.ng-dirty.ng-touched.ng-invalid {
  border-color: #e24c4c;
}

/* Set our style to show correct border in PrimeNG text input type */
.p-inputtext.ng-valid {
  border-color: var(--blue-500);
}

p-password.ng-invalid.ng-dirty > .p-password > .p-inputtext {
  border-color: unset;
}

p-password.ng-invalid.ng-touched.ng-dirty > .p-password > .p-inputtext {
  border-color: #e24c4c;
}

p-password.ng-valid > .p-password > .p-inputtext {
  border-color: var(--blue-500);
}
.p-panel .p-panel-header {
  background: var(--background-color);
  border: none;
  padding: 0;
}
.p-panel .p-panel-content {
  background: var(--background-color);
  border: none;
}

.p-panel-header {
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
  justify-content: flex-end;
}
.p-panel .p-panel-content {
  padding: 0;
  padding-left: 2.5rem;
}

.p-menuitem-link {
  background-color: var(--background-color);
}

.p-steps .p-steps-item .p-menuitem-link .p-steps-title {
  padding: 0 1rem 0 1rem;
  color: #6b7280;
  text-align: center;
  white-space: normal;
}

.p-steps .p-steps-item.p-highlight .p-steps-number {
  background: var(--primary-color);
}

.p-steps-item .p-steps-title {
  font-size: 0.98rem;
}

.p-panel-icons {
  display: flex;
}

.p-tree {
  background: var(--background-color);
  border: none;
}

.p-chip {
  background-color: var(--primary-color);
  color: var(--primary-color-text);
}

.p-autocomplete-panel .p-autocomplete-items .p-autocomplete-item.p-highlight {
  color: #4b5563;
  background: #fff;
}

.p-autocomplete .p-button {
  background-color: var(--primary-color);
  border: var(--primary-color);
}

.p-tree .p-tree-container .p-treenode:focus > .p-treenode-content {
  box-shadow: none;

  .p-fileupload .p-fileupload-buttonbar .p-button {
    background: var(--primary-color);
    border: var(--primary-color);
  }

  .p-fieldset {
    background: var(--background-color);
    border-radius: 4px;
  }

  .p-fieldset.p-fieldset-toggleable .p-fieldset-legend a {
    background: #fafff9;
    color: #374151;
    border-radius: 6px;
    transition: box-shadow 0.2s;
  }
}

.notification-avatar .p-overlay-badge .p-badge {
  position: absolute;
  top: 10%;
  right: 10%;
  transform: translate(50%, -50%);
  transform-origin: 100% 0;
  margin: 0;
}

.notification-avatar .p-badge {
  scale: 1.85;
  animation:
    blinker 1.3s linear infinite,
    bright 1.3s linear infinite;
}

.notification-avatar .p-overlay-badge {
  position: relative;
}

.p-highlight {
  color: var(--primary-color);
}

.p-highlight > p-sorticon > sortamountupalticon > svg {
  color: var(--primary-color);
}

.p-highlight > p-sorticon > sortamountdownicon > svg {
  color: var(--primary-color);
}

@keyframes blinker {
  50% {
    opacity: 0.4;
  }
}

@keyframes bright {
  0% {
    filter: drop-shadow(0px 0px 0px #ef4444);
  }
  45% {
    filter: drop-shadow(0px 0px 30px #ef4444);
  }
}

